[project]
name = "srconvnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "einops>=0.8.1",
    "pyyaml>=6.0.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
